*** Some minor look fixes * EDIT: PartnerItem.vue - Simplified image src * EDIT: ContentItem.vue - Simplified image src - BUG [Item description wrapping]: interface.sass - Added 'white-space: pre-wrap' for <pre>

--- a/src/assets/sass/interface.sass
+++ b/src/assets/sass/interface.sass
@@ -533,10 +533,10 @@ button
 
 
 .catalog-item
-	width: 17em
+	width: 18em
 	&__image-box
-		width: 17em
-		height: 17em
+		width: 18em
+		height: 18em
 		background-color: #eee
 		position: relative
 		margin-bottom: 0.5em
@@ -599,6 +599,7 @@ button
 	p, pre
 		line-height: 1.4
 		color: #666
+		white-space: pre-wrap
 
 .edit-item-btn
 	width: 1.5em
